Cambiando direccion de index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/output.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
     <title>Document</title>
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-pink-500">
@@ -36,7 +36,7 @@
     </main>
 
 </body>
-<script src="animation.js"></script>
-<script src="app.js" type="module"></script>
-<script src="anime.js" type="module"></script>
+<script src="src/animation.js"></script>
+<script src="src/app.js" type="module"></script>
+<script src="src/anime.js" type="module"></script>
 </html>
