--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dist/output.css">
     <link rel="stylesheet" href="src/styles.css">
-    <title>Document</title>
+    <title>Documento</title>
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-pink-500">
 
