--- a/src/index.html
+++ b/src/index.html
@@ -374,7 +374,7 @@
             </div>
         </section>
 
-        <section class="mt-56 mb-52">
+        <section class="mt-56 mb-52 w-5/6">
             <div class="w-full sombra mx-auto rounded-lg bg-secondary-2 shadow-lg px-5 pt-5 pb-10 text-gray-800" style="max-width: 500px">
                 <div class="w-full pt-1 pb-5">
                     <div class="overflow-hidden rounded-full w-20 h-20 -mt-16 mx-auto shadow-lg">
